--- a/MyFirstApi/MyFirstApi.csproj
+++ b/MyFirstApi/MyFirstApi.csproj
@@ -1,8 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MyApi.Entity\MyApi.Entity.csproj" />
